midpoint-live-demo/kustomize-base/kubernetes-objects/keycloak/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations: 
    kubernetes.io/ingress.class: azure/application-gateway    
spec:
#  ingressClassName: haproxy
  tls:
    - hosts:
        - demo.example.com
      secretName: cert-mp-demo
  rules:
    - host: demo.example.com
      http:
        paths:
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak-server
                port:
                  number: 8080
